package com.designpatterns.graph.pattern.creative.builder;

import lombok.Data;

/**
 * @author: jiangjiabin
 * @date: Create in 2:44 2021/10/31
 * @description: 产品 -> Product
 */
@Data
public class House {

    private String basic;
    private String wall;
}
